--- a/examples/config/pointRobotMpc.yaml
+++ b/examples/config/pointRobotMpc.yaml
@@ -7,18 +7,22 @@ mpc:
   slack: False
   interval: 1
   initialization: "current_state"
-  constraints: [ 'RadialConstraints',
-                 'SelfCollisionAvoidanceConstraints',
-                 'JointLimitConstraints',
-                 'InputLimitConstraints']
+  constraints:
+    - 'RadialConstraints'
+    - 'SelfCollisionAvoidanceConstraints'
+    - 'JointLimitConstraints'
+    - 'InputLimitConstraints'
+  objectives:
+    - 'GoalReaching'
+    - 'ConstraintAvoidance'
   weights:
     w: 1.0
     wvel: [1.0, 1.0, 1.0]
     ws: 1e10
     wu: 0.1
     wobst: 0.05
+    wconstr: [0.5, 0.0, 0.0, 0.0]
   number_obstacles: 1
-
   control_mode: "acc"
 robot:
   collision_links: 
@@ -29,3 +33,5 @@ robot:
   root_link: ee_link
   end_link: base_link
   base_type: holonomic
+example:
+  debug: False
